--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -5,6 +5,21 @@
     <!-- *************************************************************** -->
     <div class="row">
         <div class="col-sm-6 col-lg-3">
+            <div class="card border-end ">
+                <div class="card-body">
+                    <div class="d-flex align-items-center">
+                        <div>
+                            <h2 class="text-dark mb-1 w-100 text-truncate font-weight-medium"><%= data.debtor.length %></h2>
+                            <h6 class="text-muted font-weight-normal mb-0 w-100 text-truncate">รายการ</h6>
+                        </div>
+                        <div class="ms-auto mt-md-3 mt-lg-0">
+                            <span class="opacity-7 text-warning"><i class="fa-solid fa-list fa-2x"></i></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-lg-3">
             <div class="card border-end">
                 <div class="card-body">
                     <div class="d-flex align-items-center">
