--- a/views/pages/manage.ejs
+++ b/views/pages/manage.ejs
@@ -22,7 +22,7 @@
                                     </div>
                                     <div class="form-group mb-3">
                                         <label class="form-label">Description</label>
-                                        <input type="text" name="description" class="form-control" value="-" id="description">
+                                        <input type="text" name="description" class="form-control" id="description">
                                     </div>
                                 </div>
                             </div>
@@ -67,6 +67,7 @@
 
 
 <script>
+    // get date
     var objToday = new Date(),
 	weekday = new Array('Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'),
 	dayOfWeek = weekday[objToday.getDay()],
@@ -83,15 +84,27 @@
     document.getElementById("date").value = today;
 </script>
 
+
 <script>
-    document.getElementById("description").addEventListener("click",function(){
-        document.getElementById("description").value = "";
+    // remove default value when first click (Amount)
+    let amountClickCount = 0;
+    document.getElementById("amount").value = 0;
+    document.getElementById("amount").addEventListener("click",function(){
+        if(amountClickCount > 0){
+            document.getElementById("amount").value = "";
+            amountClickCount++;
+        }
     });
 </script>
 
 <script>
-    document.getElementById("amount").value = 0;
-    document.getElementById("amount").addEventListener("click",function(){
-        document.getElementById("amount").value = "";
+    // remove default value when first click (Description)
+    let descriptionClickCount = 0;
+    document.getElementById("amount").value = "-";
+    document.getElementById("description").addEventListener("click",function(){
+        if(descriptionClickCount > 0){
+            document.getElementById("description").value = ""; 
+            descriptionClickCount++;
+        }
     });
 </script>
