--- a/views/pages/manage.ejs
+++ b/views/pages/manage.ejs
@@ -90,7 +90,7 @@
     let amountClickCount = 0;
     document.getElementById("amount").value = 0;
     document.getElementById("amount").addEventListener("click",function(){
-        if(amountClickCount > 0){
+        if(amountClickCount == 0){
             document.getElementById("amount").value = "";
             amountClickCount++;
         }
@@ -102,7 +102,7 @@
     let descriptionClickCount = 0;
     document.getElementById("amount").value = "-";
     document.getElementById("description").addEventListener("click",function(){
-        if(descriptionClickCount > 0){
+        if(descriptionClickCount == 0){
             document.getElementById("description").value = ""; 
             descriptionClickCount++;
         }
