Add href footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="footer text-center text-muted">
-    © 2023 Copyright: 💕 I_NonKanakorn 💕
+    © 2023 Copyright: By <a href="https://github.com/ImJustNon/dear-debtor-v2">💕 I_NonKanakorn 💕</a>
 </footer>
